src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

/* font-family: "Gowun Batang", serif;
font-family: "Sigmar One", cursive; */

body {
  margin: 0;
  font-family: "Gowun Batang", serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.container-fluid {
  padding: 0;
}

/* Nav */
#nav-bar-id {
  z-index: 2;
}

.nav-mello {
  font-family: "Sigmar One", cursive;
  color: #f0a500 !important;
}

.nav-link:hover {
  color: #e45826 !important;
}

#search-btn {
  border-color: #e45826;
  color: #e45826;
}

#search-btn:hover {
  background-color: #e45826;
  color: white;
}

#cart-count {
  background-color: #35d0ba;
  color: white;
  border-radius: 50px;
  padding: 1px 7px 1px 4px;
  text-align: center;
  font-weight: bold;
}

.logout-btn {
  background-color: transparent;
  color: #f0a500;
  border: none;
  margin: 0;
  vertical-align: bottom;
  display: block;
  padding: 0.5rem 1rem;
}

.logout-btn:hover {
  background-color: transparent;
  color: #35d0ba;
}

#nav-user-div {
  display: flex;
  margin: 0 auto;
}
#user-icon {
  color: #35d0ba;
  display: block;
  padding: 0.5rem 0rem;
}

.nav-item {
  display: flex;
}

/* Home Screen */

#big-mello {
  color: #f0a500;
  background-color: transparent;
  position: absolute;
  font-size: 10rem;
  font-family: "Sigmar One", cursive;
  margin: 6% auto;
  width: 100vw;
  z-index: 2;
}

#bonfire {
  /* max-height: 100vh;
  min-width: 100vw; */

  /* Set rules to fill background */
  min-height: 100%;
  min-width: 1024px;

  /* Set up proportionate scaling */
  width: 100%;
  height: auto;

  /* Set up positioning */
  position: fixed;
  top: 0;
  left: 0;
}

@media screen and (max-width: 1024px) {
  /* Specific to this particular image */
  #bonfire {
    left: 50%;
    margin-left: -512px; /* 50% */
  }
}

.credit {
  background-color: transparent;
  position: absolute;
  height: 10px;
}

.home-screen {
  height: 100vh;
}

#landing-p {
  position: absolute;
  font-family: "Gowun Batang", serif;
  color: #f0a500;
  margin: 40vh auto;
  width: 100vw;
  font-size: 2rem;
  z-index: 2;
}

@media screen and (max-width: 780px) {
  #big-mello {
    font-size: 5rem;
  }

  #bonfire {
    height: 100%;
    width: 200%;
  }

  #landing-p {
    margin: 20vh auto;
    width: 100vw;
    font-size: 2rem;
    padding: 0 15px;
    z-index: 2;
  }
}

/* STORE FRONT */

.card {
  width: 18rem;
}

.card-title > a {
  color: black;
  font-size: 2.5rem;
}

.card-body {
  min-width: 250px;
}

.card-title > a:hover {
  color: #e45826;
  text-decoration: none;
}

.card-img-top {
  width: 40%;
  margin: 1rem auto;
}

.page-header {
  margin: 1rem;
}

.product-grid {
  display: flex;
  flex-wrap: wrap;
}

.item-btn {
  background-color: #f0a500;
  border-color: #f0a500;
}

.item-btn:hover {
  background-color: black;
  border: none;
}

.add-cart {
  background-color: transparent;
  margin-left: 1vw;
  border-color: #35d0ba;
}

.add-cart i {
  color: #35d0ba;
}

#modal-box-cart-add {
  background-color: rgb(50, 59, 59);
  color: white;
  border: #e45826 2px inset;
}

.modal-header {
  margin: auto;
}

.modal-footer {
  display: unset;
  border-top: none;
}

.modal-header h5 {
  font-size: 2rem;
  font-family: "Gowun Batang", serif;
}

@media screen and (max-width: 411px) {
  .card {
    width: 27rem;
  }
}

/* PRODUCT DETAIL */

.detail-price {
  color: #e45826;
  font-size: 2rem;
  font-weight: bold;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.detail-submit {
  width: 30vw;
  margin: 0.5rem;
}

.detail-qty {
  width: 10vw;
  margin: 0.5rem;
}

/* CART */

.cart-card {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  min-width: 415px;
  height: 20vh;
  align-content: center;
  border-bottom: black 1px solid;
  border-top: none;
  border-right: none;
  border-left: none;
}

.cart-img {
  width: 8vw;
  height: 15vh;
  padding: 0.5rem;
}

.cart-screen {
  display: flex;
  flex-direction: row;
}

.cart-items {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 40vw;
  height: 20vh;
  padding: 1rem;
  padding-left: 6rem;
}

#order-sum {
  align-content: center;
  margin: 2rem auto;
}

.cart-card-title {
  font-size: 1.5rem;
  padding-top: 0.6rem;
}

.del-btn {
  color: #e45826;
  background-color: transparent;
  border: none;
  font-size: 1rem;
}

.del-btn:hover {
  color: white;
  background-color: #e45826;
}

.cart-title {
  color: black !important;
}

.checkout-btn {
  color: black;
  border-color: #e45826;
}

.checkout-btn:hover {
  background-color: black;
  color: #f0a500;
  border-color: #f0a500;
}

#subtotal {
  font-size: 2rem;
  color: teal;
}

@media screen and (max-width: 880px) {
  .cart-card {
    flex-direction: column;
  }

  .cart-img {
    width: 15vw;
  }

  #order-sum {
    margin-right: 5vw;
  }
}

@media screen and (max-width: 480px) {
  #order-sum {
    position: absolute;
    margin: 60vh auto;
    width: 100vw;
  }
  .cart-items {
    width: 80vw;
    margin-bottom: 10px;
    min-width: unset;

    padding: 0px;
  }
  .cart-screen {
    display: block;
  }
}

/* CHECKOUT */

#checkout-sum {
  padding-right: 30%;
  padding-left: 30%;
}

.total-row {
  border-top: 8px solid #f0a500;
  font-weight: bold;
}

/* Edit Products Page */

#table-img {
  width: 4vw;
}

.product-list {
  align-content: center;
  text-align: center;
}

.admin-btn {
  color: black;
  border-color: #e45826;
  background-color: #e45826;
  margin: 10px;
}

.edit-btn {
  color: white;
}

#btn-col {
  display: flex;
}

#thank-you {
  color: #f0a500;
  background-color: transparent;
  position: absolute;
  font-size: 5rem;
  font-family: "Sigmar One", cursive;
  margin: 6% auto;
  width: 100vw;
}

#return-link {
  position: absolute;
  font-size: 2rem;
  background-color: darkturquoise;
  color: white;
  border-radius: 20px;
  padding: 1.4rem;
  width: 33vw;
  margin: 600px auto;
  left: 0px;
  right: 0px;
}
#return-link:hover {
  border: #f0a500;
  border-style: solid;
  text-decoration: none;
}

#restricted {
  margin: 25% auto;
  color: red;
}
#restricted-return-link {
  position: absolute;
  font-size: 2rem;
  background-color: darkturquoise;
  color: white;
  border-radius: 20px;
  padding: 1.4rem;
  width: 33vw;
  margin: 50px auto;
  left: 0px;
  right: 0px;
}

#order-num {
  position: absolute;
  margin: 60vh auto;
  font-size: 1rem;
  font-weight: bold;
  right: 0;
  left: 0;
}

/* Menu Cart Display */

#nav-img {
  width: 15%;
  float: left;
}

#cart-item-name {
  display: block;
  padding-top: 10px;
  font-size: 16px;
}

#cart-item-quantity {
  color: lightslategray;
}

#cart-item-price {
  float: right;
}

.subtotal-nav {
  font-weight: bold;
  text-align: center;
  border-top: lightslategrey 2px solid;
}

.nav-cart-links {
  display: grid;
}

.chk-btn {
  background-color: #35d0ba;
  color: white;
  border: none;
}

.chk-btn:hover {
  background-color: black;
}

